# ergo

./: .env.example  .gitignore  COPYRIGHT.md  Cargo.toml  INSTALL.md  README.md  car  justfile  rustfmt.toml
.cargo/: config.toml
aio-server/: Cargo.toml
aio-server/src/: main.rs
api/: Cargo.toml  README.md  backend_data.rs  build.rs  error.rs  lib.rs  main.rs  server.rs  service_config.rs  tracing_config.rs
api/auth/: mod.rs
api/cmd/: drain_queues.rs  erq.rs  erq_stress.rs  hash_passwd.rs  make_api_key.rs  make_id.rs  make_json_schema.rs  mod.rs  server.rs
api/database/: mod.rs  object_id.rs  transaction.rs
api/notifications/: discord_webhook.rs  mod.rs  notification.rs
api/queues/: dequeuer_loop.rs  enqueue_scheduled.rs  generic_stage.rs  job_cancel.rs  mod.rs  postgres_drain.rs
api/routes/: accounts.rs  action_categories.rs  actions.rs  inputs.rs  mod.rs  tasks.rs
api/tasks/: handlers.rs  mod.rs  queue_drain_runner.rs  scripting.rs  state_machine.rs
api/tasks/actions/: accounts.rs  dequeue.rs  execute.rs  handlers.rs  http_executor.rs  js_executor.rs  mod.rs  queue.rs  raw_command_executor.rs  template.rs
api/tasks/inputs/: dequeue.rs  handlers.rs  mod.rs  queue.rs
api/tests/: auth.rs  main.rs  object_id.rs  smoke_test.rs  transaction.rs
api/tests/common/: client.rs  database.rs  mod.rs  tasks.rs
api/tests/tasks/: crud.rs  execution.rs  mod.rs  periodic.rs
api/vault/: mod.rs
api/web_app_server/: mod.rs
auth/: Cargo.toml  api_key.rs  error.rs  lib.rs  middleware.rs  password.rs
auth/src/: lib.rs
config/: Cargo.toml
data/: README.md  account-types.sql  accounts.sql  action-categories.sql  bootstrap.sh  load_action.sh  load_input.sh  load_sql.sh  load_task.sh  notifications_discord.sql  single-user-bootstrap.sql
database/: Cargo.toml  conn_executor.rs  connection_manager.rs  error.rs  executor.rs  lib.rs  object_id.rs  pool.rs  redis.rs  test.rs  transaction.rs  vault.rs
database/tests/: transaction.rs
docker/: Dockerfile-selfcontained
graceful-shutdown/: Cargo.toml
graceful-shutdown/src/: lib.rs
graceful_shutdown/: Cargo.toml  lib.rs
js/: Cargo.toml  console.rs  lib.rs  permissions.rs  pool.rs  raw_serde.rs  serialized_execution.js  serialized_execution.rs  startup.js  startup_postsnapshot.js  worker.rs
js/module_loader/: memory.rs  mod.rs  network.rs  redis.rs
migrations/: 20210315080335_init.down.sql  20210315080335_init.sql  20210315080335_init.up.sql  20210319202300_add_users.down.sql  20210319202300_add_users.sql  20210319202300_add_users.up.sql  20210321000136_tasks_events_actions.down.sql  20210321000136_tasks_events_actions.up.sql  20210329015103_event_queue.down.sql  20210329015103_event_queue.up.sql  20210401001543_action_queue.down.sql  20210401001543_action_queue.up.sql  20210430072857_external_notifications.down.sql  20210430072857_external_notifications.up.sql  20210508073305_task_trigger_name.down.sql  20210508073305_task_trigger_name.up.sql  20210512070204_object_id_type_tracking.down.sql  20210512070204_object_id_type_tracking.up.sql  20210512080045_task_id_unique_per_org.down.sql  20210512080045_task_id_unique_per_org.up.sql  20210514063133_generic_queue_stage.down.sql  20210514063133_generic_queue_stage.up.sql  20210708190033_log_time_index.down.sql  20210708190033_log_time_index.up.sql  20210823001057_task_configs_versioning.down.sql  20210823001057_task_configs_versioning.up.sql  20210830005106_action_postprocess_script.down.sql  20210830005106_action_postprocess_script.up.sql  20210903071346_action_timeout.down.sql  20210903071346_action_timeout.up.sql  20211003030631_drop_custom_queue_stages.down.sql  20211003030631_drop_custom_queue_stages.up.sql  20211003030918_task_run_as_user.down.sql  20211003030918_task_run_as_user.up.sql  20211009210039_periodic_task_triggers.down.sql  20211009210039_periodic_task_triggers.up.sql  20211010033011_queue_job_alteration.down.sql  20211010033011_queue_job_alteration.up.sql  20220206034324_accounts_permissions.down.sql  20220206034324_accounts_permissions.up.sql  (+2 more)
notifications/: Cargo.toml  discord_webhook.rs  error.rs  lib.rs  notification.rs
queuer/: Cargo.toml
queues/: Cargo.toml  dequeuer_loop.rs  enqueue_scheduled.rs  error.rs  generic_stage.rs  get_job.rs  job.rs  job_cancel.rs  job_done.rs  job_error.rs  lib.rs  postgres_drain.rs  start_work.rs  update_job.rs  update_stage.rs  work_item.rs
schemas/: action_payload.json  input_payload.json  task_input.json
scripts/: createdb.sql  env.sh  gen_passwd.sh  gen_postgresql_schema_image.sh  init_db.sh  set_db_passwords.sh  start_test_postgres_docker.sh  vault_configure_postgres.sql  vault_dev.sh  vault_initial_setup.sh  vault_roles.sh
server/: Cargo.toml
server/src/: main.rs
src/: backend_data.rs  error.rs  graceful_shutdown.rs  lib.rs  main.rs  server.rs  service_config.rs  status_server.rs  tracing_config.rs
task_types/: Cargo.toml  lib.rs  scripting.rs  state_machine.rs
tasks/: Cargo.toml  build.rs  dataflow.rs  error.rs  lib.rs  periodic.rs  queue_drain_runner.rs  scripting.rs  state_machine.rs
tasks/actions/: accounts.rs  dequeue.rs  execute.rs  http_executor.rs  js_executor.rs  mod.rs  queue.rs  raw_command_executor.rs  send_input_executor.rs  template.rs
tasks/dataflow/: config.rs  dag.rs  node.rs  run.rs
tasks/inputs/: dequeue.rs  mod.rs  queue.rs
tasks/js_helpers/: .gitignore  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
tasks/js_helpers/src/: dataflow.js  dataflow.ts  index.ts
tasks/scripting/: .gitignore  immediate.rs  runtime.rs  task_data.rs
tasks/scripting/js_helpers/: 00_devalue.js  00_global_ergo.js  10_task_actions.js  10_task_actions_inputs.js  50_task_context.js
test/: Cargo.toml  lib.rs
tracing-config/: Cargo.toml
tracing-config/src/: lib.rs
vault/: Cargo.toml
vault/src/: conn_executor.rs  connection_manager.rs  lib.rs  vault_token_refresh.rs
vault_postgres/: Cargo.toml
vault_postgres/src/: connection_manager.rs  lib.rs  vault_token_refresh.rs
wasm/: Cargo.toml  build  lib.rs
web-server/: Cargo.toml
web-server/src/: lib.rs
(+288 files in other folders)
