[package]
name = "ergo"
version = "0.1.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2018"
resolver = "2"

default-run = "aio-server"

[lib]
name = "ergo"

[[bin]]
name = "aio-server"
path = "src/bin/aio-server.rs"

[[bin]]
name = "drain-queues"
path = "src/bin/drain-queues.rs"

[[bin]]
name = "erq"
path = "src/bin/erq.rs"

[[bin]]
name = "erq-stress"
path = "src/bin/erq-stress.rs"

[[bin]]
name = "hash_passwd"
path = "src/bin/hash_passwd.rs"

[[bin]]
name = "make_api_key"
path = "src/bin/make_api_key.rs"

[features]
test-redis = []
test-all = ["test-redis"]

[dependencies]
# actix-cors = "0.6.0-beta.1"
actix-identity = "0.4.0-beta.1"
# actix-session = "0.5.0-beta.1"
actix-service = "=2.0.0-beta.5"
actix-web = "=4.0.0-beta.5"
actix-web-httpauth = "0.6.0-beta.1"
anyhow = "1.0.40"
argon2 = "0.2.0"
async-stream = "0.3.1"
async-trait = "0.1.50"
backoff = { version = "0.3.0", features = ["tokio"] }
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.11.0"
console = "0.14.1"
const_format = "0.2.14"
crossbeam = "0.8.0"
deadpool = "0.7.0"
deadpool-redis = "0.7.1"
deno_core = "0.86.0"
dotenv = "0.15.0"
either = "1.6.1"
envoption = "0.2.1"
futures = "0.3.14"
fxhash = "0.2.1"
handlebars = "3.5.5"
hashicorp_vault = { git="https://github.com/dimfeld/vault-rs", branch="async" }
indicatif = "0.16.0"
itertools = "0.10.0"
jsonschema = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"
num_cpus = "1.13.0"
rand = "0.8.3"
rand_core = "0.6.2"
redis = { version = "0.20.0", features = ["tokio-comp"] }
reqwest = "0.11.3"
rusty_v8 = "0.22.2"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_millis = "0.1.1"
serde_v8 = "0.3.0"
sha3 = "0.9.1"
smallvec = { version = "1.6.1", features = ["serde", "union"] }
sqlx = { version = "0.5.2", features = ["postgres", "json", "uuid", "chrono", "time", "runtime-tokio-rustls"] }
structopt = "0.3.21"
thiserror = "1.0.24"
tokio = { version = "1.5.0", features = ["full", "test-util"] }
tracing = "0.1.26"
tracing-actix-web = "0.4.0-beta.4"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2.18", features = ["registry", "env-filter"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
assert_matches = "1.5.0"
libc = "0.2.94"
wiremock = "0.5.2"
