[package]
name = "aio-server"
version = "0.1.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path="../config" }
graceful-shutdown = { path="../graceful-shutdown" }
tracing-config = { path="../tracing-config" }
vault = { path="../vault" }
web-app-server = { path="../web-app-server" }
web-event-trigger = { path="../web-event-trigger" }

actix-web = "4.0.0-beta.4"
anyhow = "1.0.38"
dotenv = "0.15.0"
hashicorp_vault = "2.0.1"
tracing = "0.1.25"
tracing-actix-web = "0.3.0-beta.2"
