[package]
name = "ergo-api"
version = "0.2.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2018"
autotests = false

[lib]
path = "lib.rs"

[[bin]]
path = "main.rs"
name = "ergo"

[[test]]
name = "test"
path = "tests/main.rs"

[features]
test_redis = []
test_password = []
test_all = ["test_redis", "test_password"]
test_slow = ["test_password"]

[dependencies]
# actix-cors = "0.6.0-beta.2"
actix-files = "0.6.0-beta.6"
actix-identity = "0.4.0-beta.2"
actix-rt = "2.2.0"
actix-service = "2.0.0"
actix-web = "=4.0.0-beta.8"
actix-web-httpauth = "0.6.0-beta.2"
anyhow = "1.0.42"
async-stream = "0.3.2"
async-trait = "0.1.50"
backoff = { version = "0.3.0", features = ["tokio"] }
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.11.0"
console = "0.14.1"
const_format = "0.2.14"
crossbeam = "0.8.1"
deadpool = "0.8.1"
deadpool-redis = "0.8.1"
dotenv = "0.15.0"
either = { version="1.6.1", features=["serde"] }
envoption = "0.2.1"
ergo-auth = { version = "0.1.0", path="../auth" }
ergo-database = { version = "0.1.0", path="../database" }
ergo-graceful-shutdown = { version = "0.1.0", path="../graceful_shutdown" }
ergo-js = { version = "0.0.0", path="../js" }
ergo-queues = { version = "0.2.0", path="../queues" }
futures = "0.3.15"
fxhash = "0.2.1"
handlebars = "4.0.0"
hashicorp_vault = { git="https://github.com/dimfeld/vault-rs", branch="async" }
indicatif = "0.16.2"
itertools = "0.10.0"
jsonschema = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"
num_cpus = "1.13.0"
rand = "0.8.3"
rand_core = "0.6.2"
redis = { version = "0.20.2", features = ["tokio-comp"] }
reqwest = { version="0.11.4", features=["rustls-tls"] }
schemars = { git="https://github.com/dimfeld/schemars", branch="sqlx-json", features=["smallvec", "uuid", "chrono", "preserve_order", "sqlx"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_millis = "0.1.1"
smallvec = { version = "1.6.1", features = ["serde", "union"] }
snafu = "0.6.10"
sqlx = { version = "0.5.5", features = ["postgres", "json", "uuid", "chrono", "time", "runtime-tokio-rustls"] }
structopt = "0.3.22"
thiserror = "1.0.25"
tokio = { version = "1.9.0", features = ["full", "test-util"] }
tracing = "0.1.26"
tracing-actix-web = { version="0.4.0-beta.8", default-features=false, features=["emit_event_on_error"] }
tracing-bunyan-formatter = "0.2.5"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2.19", features = ["registry", "env-filter"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
assert_matches = "1.5.0"
libc = "0.2.95"
once_cell = "1.8.0"
# syn = { version="1.0.73", features=["full"] }
# quote = "1.0.9"
wiremock = "0.5.3"

[build-dependencies]
ergo-js = { version = "0.0.0", path="../js" }
