[package]
name = "auth"
version = "0.1.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vault = { "path"="../vault" }

actix-web = "4.0.0-beta.4"
serde = { version = "1.0.124", features = ["derive"] }
sqlx = { version="0.5.1", features=["postgres", "json", "time", "runtime-tokio-rustls"] }
thiserror = "1.0.24"
tracing = "0.1.25"
