[package]
name = "ergo-auth"
version = "0.1.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2018"

[lib]
path = "lib.rs"

[features]
test_password = []
test_all = ["test_password"]
test_slow = ["test_password"]

[dependencies]
actix-identity = "0.4.0-beta.2"
actix-service = "2.0.0"
actix-web = "=4.0.0-beta.8"
actix-web-httpauth = "0.6.0-beta.2"
argon2 = "0.2.1"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
envoption = "0.2.1"
ergo-database = { version = "0.1.0", path="../database" }
futures = "0.3.15"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sha3 = "0.9.1"
smallvec = { version = "1.6.1", features = ["serde", "union"] }
sqlx = { version = "0.5.5", features = ["postgres", "json", "uuid", "chrono", "time", "runtime-tokio-rustls"] }
thiserror = "1.0.25"
tokio = { version = "1.9.0", features = ["full", "test-util"] }
tracing = "0.1.26"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
assert_matches = "1.5.0"
