[package]
name = "ergo-database"
version = "0.1.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2018"
autotests = false

[lib]
path = "lib.rs"

[dependencies]
async-stream = "0.3.2"
async-trait = "0.1.50"
backtrace = "0.3.61"
base64 = "0.13.0"
deadpool = "0.8.1"
deadpool-redis = "0.8.1"
either = "1.6.1"
ergo-graceful-shutdown = { version = "0.1.0", path="../graceful_shutdown" }
futures = "0.3.15"
hashicorp_vault = { git="https://github.com/dimfeld/vault-rs", branch="async" }
itertools = "0.10.0"
log = "0.4.14"
redis = { version = "0.20.2", features = ["tokio-comp"] }
schemars = { git="https://github.com/dimfeld/schemars", branch="sqlx-json", features=["smallvec", "uuid", "chrono", "preserve_order", "sqlx"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.5.5", features = ["postgres", "json", "uuid", "chrono", "time", "runtime-tokio-rustls"] }
thiserror = "1.0.25"
tokio = { version = "1.9.0", features = ["full", "test-util"] }
tracing = "0.1.26"
ulid = { version = "0.4.1", features=["uuid"] }
uuid = { version = "0.8.2", features = ["serde"] }

