[package]
name = "ergo-database"
version = "0.1.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2018"
autotests = false

[lib]
path = "lib.rs"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-stream = "0.3.2"
async-trait = "0.1.51"
backtrace = "0.3.61"
deadpool = "0.8.2"
deadpool-redis = "0.9.0"
either = "1.6.1"
ergo-graceful-shutdown = { version = "0.1.0", path="../graceful_shutdown" }
futures = "0.3.17"
hashicorp_vault = { git="https://github.com/dimfeld/vault-rs", branch="async" }
itertools = "0.10.1"
log = "0.4.14"
redis = { version = "0.21.2", features = ["tokio-comp"] }
schemars = { git="https://github.com/dimfeld/schemars", branch="sqlx-json", features=["smallvec", "uuid", "chrono", "preserve_order", "sqlx"] }
sqlx = { version = "0.5.7", features = ["postgres", "json", "uuid", "chrono", "time", "runtime-tokio-rustls"] }
tokio = { version = "1.11.0", features = ["full", "test-util"] }
tracing = "0.1.26"

[dependencies]
base64 = "0.13.0"
schemars = { git="https://github.com/dimfeld/schemars", branch="sqlx-json", features=["smallvec", "uuid", "chrono", "preserve_order"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
thiserror = "1.0.29"
ulid = { version = "0.4.1", features=["uuid"] }
uuid = { version = "0.8.2", features = ["serde"] }

