[package]
name = "ergo-database"
version = "0.1.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2021"

[lib]
path = "lib.rs"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-stream = "0.3.2"
async-trait = "0.1.51"
backtrace = "0.3.61"
deadpool = "0.8.2"
deadpool-redis = "0.9.0"
dotenv = "0.15.0"
either = "1.6.1"
ergo-graceful-shutdown = { version = "0.1.0", path="../graceful_shutdown" }
futures = "0.3.25"
itertools = "0.10.1"
log = "0.4.14"
redis = { version = "0.21.2", features = ["tokio-comp"] }
schemars = { git="https://github.com/dimfeld/schemars", features=["smallvec", "uuid1", "chrono", "preserve_order", "sqlx"] }
sqlx = { version = "0.6.2", features = ["postgres", "json", "uuid", "chrono", "time", "runtime-tokio-rustls"] }
tokio = { version = "1.11.0", features = ["full", "test-util"] }
tracing = "0.1.37"

[dependencies]
anyhow = "1.0.43"
base64 = "0.13.0"
envoption = "0.2.1"
lazy_static = "1.4.0"
schemars = { git="https://github.com/dimfeld/schemars", features=["smallvec", "uuid1", "chrono", "preserve_order"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
thiserror = "1.0.29"
ulid = { version = "1.0.0", features=["uuid"] }
uuid = { version = "1.1", features = ["serde"] }
