[package]
name = "graceful-shutdown"
version = "0.1.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.3.0", features=["full"] }

[dev-dependencies]
libc = "0.2.90"
