[package]
name = "ergo-js"
version = "0.0.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
deno_console = "0.13.0"
deno_core = "0.95.0"
deno_fetch = "0.36.0"
deno_net = "0.4.0"
deno_url = "0.13.0"
deno_web = "0.44.0"
deno_webidl = "0.13.0"
ipnet = "2.3.1"
lazy_static = "1.4.0"
once_cell = "1.8.0"
rusty_v8 = "0.25.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_millis = "0.1.1"
serde_v8 = "0.8.0"
thiserror = "1.0.26"
tokio = { version = "1.8.1", features = ["full", "test-util"] }
tracing = "0.1.26"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
assert_matches = "1.5.0"

