[package]
name = "ergo-js"
version = "0.0.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2018"

[lib]
name = "ergo_js"
path = "lib.rs"

[dependencies]
async-channel = "1.6.1"
async-trait = "0.1.51"
chrono = { version="0.4.19", features=["serde"] }
clru = "0.5.0"
deadpool = "0.8.1"
deadpool-redis = "0.8.1"
deno_console = "0.14.0"
deno_core = "0.96.0"
deno_crypto = "0.28.0"
deno_fetch = "0.37.0"
deno_net = "0.5.0"
deno_url = "0.14.0"
deno_web = "0.45.0"
deno_webidl = "0.14.0"
downcast-rs = "1.2.0"
futures = "0.3.16"
fxhash = "0.2.1"
ipnet = "2.3.1"
itertools = "0.10.1"
lazy_static = "1.4.0"
log = { version = "0.4.14", optional = true }
num_cpus = "1.13.0"
once_cell = "1.8.0"
rand = "0.8.4"
redis = { version="0.20.2", features=["tokio-comp"] }
reqwest = { version="0.11.4", features=["rustls-tls"] }
rusty_v8 = "0.26.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_millis = "0.1.1"
serde_v8 = "0.9.0"
slog = { version = "2.7.0", optional = true }
thiserror = "1.0.26"
tokio = { version = "1.9.0", features = ["full", "test-util"] }
tracing = { version = "0.1.26", optional = true }
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
wiremock = "0.5.6"

[dev-dependencies]
assert_matches = "1.5.0"
