[package]
name = "ergo-js"
version = "0.0.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2021"

[lib]
name = "ergo_js"
path = "lib.rs"

[dependencies]
anyhow = "1.0.44"
async-channel = "1.6.1"
async-trait = "0.1.51"
chrono = { version = "0.4.19", features = ["serde"] }
clru = "0.5.0"
deadpool = "0.8.2"
deadpool-redis = "0.9.0"
deno_console = "0.80.0"
deno_core = "0.162.0"
deno_crypto = "0.94.0"
deno_fetch = "0.103.0"
deno_net = "0.72.0"
deno_tls = "0.67.0"
deno_url = "0.80.0"
deno_web = "0.111.0"
deno_webidl = "0.80.0"
downcast-rs = "1.2.0"
futures = "0.3.25"
fxhash = "0.2.1"
ipnet = "2.3.1"
itertools = "0.10.1"
lazy_static = "1.4.0"
log = { version = "0.4.14", optional = true }
num_cpus = "1.13.0"
once_cell = "1.8.0"
rand = "0.8.4"
redis = { version = "0.21.2", features = ["tokio-comp"] }
reqwest = { version = "0.11.13", features = ["rustls-tls"] }
schemars = { git="https://github.com/dimfeld/schemars", features=["smallvec", "uuid1", "chrono", "preserve_order"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
serde_millis = "0.1.1"
serde_v8 = "0.73.0"
slog = { version = "2.7.0", optional = true }
thiserror = "1.0.29"
tokio = { version = "1.11.0", features = ["full", "test-util"] }
tracing = { version = "0.1.37", optional = true }
url = "2.2.2"
uuid = { version = "1.1", features = ["serde", "v4"] }
v8 = "0.58.0"

[dev-dependencies]
assert_matches = "1.5.0"
wiremock = "0.5.7"

[features]
serialized_execution = []
