[package]
name = "ergo-notifications"
version = "0.2.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2021"
autotests = false

[lib]
path = "lib.rs"

[dependencies]
async-trait = "0.1.51"
chrono = { version = "0.4.19", features = ["serde"] }
ergo-database = { version = "0.1.0", path="../database" }
ergo-graceful-shutdown = { version = "0.1.0", path="../graceful_shutdown" }
ergo-queues = { version = "0.2.0", path="../queues" }
futures = "0.3.25"
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
serde_millis = "0.1.1"
smallvec = { version = "1.6.1", features = ["serde", "union"] }
sqlx = { version = "0.6.2", features = ["postgres", "json", "uuid", "chrono", "time", "runtime-tokio-rustls"] }
thiserror = "1.0.29"
tokio = { version = "1.11.0", features = ["full", "test-util"] }
tracing = "0.1.26"
uuid = { version = "1.1", features = ["serde", "v4"] }

[dev-dependencies]
dotenv = "0.15.0"
