[package]
name = "ergo-task-types"
version = "0.2.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
fxhash = "0.2.1"
schemars = { git="https://github.com/dimfeld/schemars", branch="sqlx-json", features=["smallvec", "chrono", "preserve_order"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_millis = "0.1.1"
smallvec = { version = "1.6.1", features = ["serde", "union"] }

