[package]
name = "ergo-tasks"
version = "0.2.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2018"

[lib]
path = "lib.rs"

[features]
default = ["full"]
full = [
  "backoff",
  "ergo-database",
  "ergo-graceful-shutdown",
  "ergo-js",
  "ergo-notifications",
  "ergo-queues",
  "jsonschema/reqwest",
  "rand",
  "rand_core",
  "reqwest",
  "schemars/sqlx",
  "sqlx",
  "tokio",
  "uuid/v4"
]

[dependencies]
anyhow = "1.0.43"
async-trait = "0.1.51"
backoff = { version = "0.3.0", features = ["tokio"], optional = true }
chrono = { version = "0.4.19", features = ["serde"] }
ergo-database = { version = "0.1.0", path="../database", optional=true }
ergo-graceful-shutdown = { version = "0.1.0", path="../graceful_shutdown", optional=true }
ergo-js = { version = "0.0.0", path="../js", optional=true }
ergo-notifications = { version = "0.2.0", path="../notifications", optional=true }
ergo-queues = { version = "0.2.0", path="../queues", optional=true }
futures = "0.3.17"
fxhash = "0.2.1"
handlebars = "4.1.3"
itertools = "0.10.1"
jsonschema = { version = "0.12.1", default-features = false }
lazy_static = "1.4.0"
rand = { version = "0.8.4", optional = true }
rand_core = { version = "0.6.3", optional = true }
reqwest = { version = "0.11.4", features = ["rustls-tls"], optional = true }
schemars = { git="https://github.com/dimfeld/schemars", branch="sqlx-json", features=["smallvec", "uuid", "chrono", "preserve_order"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
serde_millis = "0.1.1"
smallvec = { version = "1.6.1", features = ["serde", "union"] }
sqlx = { version = "0.5.7", features = ["postgres", "json", "uuid", "chrono", "time", "runtime-tokio-rustls"], optional = true }
thiserror = "1.0.29"
tokio = { version = "1.11.0", features = ["full", "test-util"], optional = true }
tracing = "0.1.26"
uuid = { version = "0.8.2", features = ["serde"] }

[dev-dependencies]
assert_matches = "1.5.0"
once_cell = "1.8.0"
# syn = { version="1.0.73", features=["full"] }
# quote = "1.0.9"
wiremock = "0.5.7"

[build-dependencies]
ergo-js = { version = "0.0.0", path="../js" }
