[package]
name = "ergo-tasks"
version = "0.2.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1.0.43"
assert_matches = "1.5.0"
async-trait = "0.1.51"
chrono = { version = "0.4.19", features = ["serde"] }
cron = "0.9.0"
ergo-database = { version = "0.1.0", path="../database" }
futures = "0.3.25"
fxhash = "0.2.1"
handlebars = "4.1.3"
itertools = "0.10.1"
jsonschema = { version = "0.12.1", default-features = false }
lazy_static = "1.4.0"
schemars = { git="https://github.com/dimfeld/schemars", features=["smallvec", "uuid1", "chrono", "preserve_order"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version="1.0.67", features = ["raw_value"] }
serde_millis = "0.1.1"
smallvec = { version = "1.6.1", features = ["serde", "union"] }
thiserror = "1.0.29"
tracing = "0.1.37"
url = "2.2.2"
uuid = { version = "1.1", features = ["serde"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
backoff = { version = "0.3.0", features = ["tokio"] }
ergo-auth = { version = "0.1.0", path="../auth" }
ergo-graceful-shutdown = { version = "0.1.0", path="../graceful_shutdown" }
ergo-js = { version = "0.0.0", path="../js" }
ergo-notifications = { version = "0.2.0", path="../notifications" }
ergo-queues = { version = "0.2.0", path="../queues" }
rand = { version = "0.8.4" }
rand_core = { version = "0.6.3" }
reqwest = { version = "0.11.13", features = ["rustls-tls"] }
sqlx = { version = "0.6.2", features = ["postgres", "json", "uuid", "chrono", "time", "runtime-tokio-rustls"] }
tokio = { version = "1.11.0", features = ["full", "test-util"] }

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = { version="0.3.54" }
serde-wasm-bindgen = { version="0.3.1" }
wasm-bindgen = { version="0.2.76", features = ["serde-serialize"] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
once_cell = "1.8.0"
# syn = { version="1.0.73", features=["full"] }
# quote = "1.0.9"
wiremock = "0.5.7"

[target.'cfg(not(target_family = "wasm"))'.build-dependencies]
ergo-js = { version = "0.0.0", path="../js" }
glob = "0.3.0"
