[package]
name = "ergo-test"
version = "0.2.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
log = "0.4.14"
once_cell = "1.8.0"
tokio = { version = "1.11.0", features = ["full", "test-util"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.4"
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-tree = "0.2.2"
