[package]
name = "vault"
version = "0.1.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graceful-shutdown = { path="../graceful-shutdown" }

async-trait = "0.1.48"
deadpool = "0.7.0"
hashicorp_vault = "2.0.1"
log = "0.4.14"
serde = { version="1.0.124", features=["derive"] }
sqlx = { version="0.5.1", features=["postgres", "json", "time", "runtime-tokio-rustls"] }
thiserror = "1.0.24"
tokio = { version="1.3.0", features=["full", "test-util"] }
tracing = "0.1.25"
derivative = "2.2.0"
async-stream = "0.3.0"
futures = "0.3.13"
either = "1.6.1"

[dev-dependencies]
wiremock = "0.5.1"
