[package]
name = "vault_postgres"
version = "0.1.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.2.0"
sqlx = { version="0.5.1", features=["postgres", "json", "time", "runtime-tokio-rustls"] }
