[package]
name = "vault_postgres"
version = "0.1.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.48"
deadpool = "0.7.0"
hashicorp_vault = "2.0.1"
log = "0.4.14"
sqlx = { version="0.5.1", features=["postgres", "json", "time", "runtime-tokio-rustls"] }
thiserror = "1.0.24"
tokio = { version="1.3.0", features=["full"] }
tracing = "0.1.25"
