[package]
name = "ergo-wasm"
version = "0.1.0"
edition = "2018"

[lib]
name = "ergo_wasm"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ergo-tasks = { version = "0.2.0", path="../tasks", default-features = false }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
wasm-bindgen = { version="0.2.76", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.3.1"
js-sys = "0.3.54"
itertools = "0.10.1"
fxhash = "0.2.1"

[profile.release]
lto = true

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = ['-O4', '-g']
