[package]
name = "ergo-wasm"
version = "0.1.0"
edition = "2018"

[lib]
name = "ergo_wasm"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.44"
ergo-database = { version = "0.1.0", path="../database" }
ergo-tasks = { version = "0.2.0", path="../tasks" }
fxhash = "0.2.1"
itertools = "0.10.1"
js-sys = "0.3.54"
serde = { version = "1.0.130", features = ["derive"] }
serde-wasm-bindgen = "0.3.1"
serde_json = "1.0.67"
serde_path_to_error = "0.1.5"
wasm-bindgen = { version="0.2.76", features = ["serde-serialize"] }

# Uncomment to keep names section, which adds size but lets tools like twiggy work properly.
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = ['-O4', '-g']
